--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "dependencies": {
         "bluebird": "^3.1.5",
         "lodash": "^4.0.1",
-        "bin-protocol": "^2.0.2",
-        "nice-simple-logger": "~=0.x.x"
+        "bin-protocol": "^2.0.4",
+        "wrr-pool": "^1.0.1"
     },
     "devDependencies": {
         "mocha": "~=2.3.4",
