--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,5 @@ before_script:
   # - "sudo -H -u riak -i riak-admin bucket-type create dt-test-set '{\"props\":{\"datatype\":\"set\",\"allow_mult\":\"true\"}}'"
   # - "sudo -H -u riak -i riak-admin bucket-type activate dt-test-set"
 
+env:
+  - RIAK_ADMIN_USE_SUDO=true
