--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,12 @@ before_script:
   - "sudo apt-get purge riak"
   - "curl http://s3.amazonaws.com/downloads.basho.com/riak/2.1/2.1.3/ubuntu/precise/riak_2.1.3-1_amd64.deb -O"
   - "sudo dpkg -i riak_2.1.3-1_amd64.deb"
-  - "sudo cp test/ssl/server.* /etc/riak/"
+  - "sudo cp -r test/ssl/ /etc/riak/"
   - "pushd /etc/riak"
   - "sudo sed -i -e 's/search = off/search = on/' riak.conf"
   - "sudo sed -i -e 's/storage_backend = bitcask/storage_backend = leveldb/' riak.conf"
-  - "sudo sed -i -e 's|## ssl.certfile = $(platform_etc_dir)/cert.pem|ssl.certfile = $(platform_etc_dir)/server.crt|' riak.conf"
-  - "sudo sed -i -e 's|## ssl.keyfile = $(platform_etc_dir)/key.pem|ssl.keyfile = $(platform_etc_dir)/server.key|' riak.conf"
+  - "sudo sed -i -e 's|## ssl.certfile = $(platform_etc_dir)/cert.pem|ssl.certfile = $(platform_etc_dir)/ssl/certificate.crt|' riak.conf"
+  - "sudo sed -i -e 's|## ssl.keyfile = $(platform_etc_dir)/key.pem|ssl.keyfile = $(platform_etc_dir)/ssl/privateKey.key|' riak.conf"
   - "popd"
   - "sudo service riak start"
   - 'until sudo riak-admin test > /dev/null 2>&1; do sleep 2; done'
