--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "bluebird": "^3.1.5",
         "lodash": "^4.1.0",
         "bin-protocol": "^2.0.7",
-        "wrr-pool": "^1.0.3"
+        "wrr-pool": "^1.0.3",
+        "long": "^3.0.3"
     },
     "devDependencies": {
         "mocha": "~=2.3.4",
