--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
         "name": "Oleksiy Krivoshey",
         "email": "oleksiyk@gmail.com"
     },
-    "version": "1.1.3",
+    "version": "1.1.4",
     "main": "./lib/index.js",
-    "keywords": ["riak", "client", "node", "crdt"],
+    "keywords": ["crdt", "node", "promise", "client", "riak"],
     "dependencies": {
         "bluebird": "^3.1.5",
         "lodash": "^4.2.0",
