--- a/package.json
+++ b/package.json
@@ -1,41 +1,46 @@
 {
-    "name": "no-riak",
-    "description": "Riak 2.x client with weighted load balancing and easy to use wrappers over CRDT data types",
-    "homepage": "http://github.com/oleksiyk/no-riak",
-    "author": {
-        "name": "Oleksiy Krivoshey",
-        "email": "oleksiyk@gmail.com"
-    },
-    "version": "1.3.1",
-    "main": "./lib/index.js",
-    "keywords": ["crdt", "node", "promise", "client", "riak"],
-    "dependencies": {
-        "bluebird": "^3.3.3",
-        "lodash": "^4.5.0",
-        "bin-protocol": "^2.0.7",
-        "wrr-pool": "^1.1.2",
-        "long": "^3.0.3"
-    },
-    "devDependencies": {
-        "mocha": "^2.4.5",
-        "chai": "^3.5.0",
-        "sinon-chai": "~=2.8.0",
-        "chai-as-promised": "^5.2.0",
-        "eslint": "^2.2.0",
-        "eslint-config-magictoolbox": "^0.0.2",
-        "istanbul": "^0.4.2"
-    },
-    "bugs": {
-        "url": "https://github.com/oleksiyk/no-riak/issues"
-    },
-    "scripts": {
-        "test": "make"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/oleksiyk/no-riak.git"
-    },
-    "readmeFilename": "README.md",
-    "license": "MIT"
+  "name": "no-riak",
+  "description": "Riak 2.x client with weighted load balancing and easy to use wrappers over CRDT data types",
+  "homepage": "http://github.com/oleksiyk/no-riak",
+  "author": {
+    "name": "Oleksiy Krivoshey",
+    "email": "oleksiyk@gmail.com"
+  },
+  "version": "1.3.2",
+  "main": "./lib/index.js",
+  "keywords": [
+    "crdt",
+    "node",
+    "promise",
+    "client",
+    "riak"
+  ],
+  "dependencies": {
+    "bluebird": "^3.3.3",
+    "lodash": "^4.5.0",
+    "bin-protocol": "^2.0.7",
+    "wrr-pool": "^1.1.2",
+    "long": "^3.0.3"
+  },
+  "devDependencies": {
+    "mocha": "^2.4.5",
+    "chai": "^3.5.0",
+    "sinon-chai": "~=2.8.0",
+    "chai-as-promised": "^5.2.0",
+    "eslint": "^2.2.0",
+    "eslint-config-magictoolbox": "^0.0.2",
+    "istanbul": "^0.4.2"
+  },
+  "bugs": {
+    "url": "https://github.com/oleksiyk/no-riak/issues"
+  },
+  "scripts": {
+    "test": "make"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/oleksiyk/no-riak.git"
+  },
+  "readmeFilename": "README.md",
+  "license": "MIT"
 }
-
